# controllers/recipes.js
@@ -9,18 +9,18 @@ const getAll = async (req, res, next) => {
     });
 };
 
-// const getSingle = async (req, res, next) => {
-//     const userId = new ObjectId(req.params.id);
-//     const result = await mongodb
-//     .getDb()
-//     .db()
-//     .collection('contacts')
-//     .find({_id: userId});
-//     result.toArray().then((lists) => {
-//         res.setHeader('Content-Type', 'application/json');
-//         res.status(200).json(lists[0]);
-//     });
-// };
+const getSingle = async (req, res, next) => {
+    const userId = new ObjectId(req.params.id);
+    const result = await mongodb
+    .getDb()
+    .db()
+    .collection('recipes')
+    .find({_id: userId});
+    result.toArray().then((lists) => {
+        res.setHeader('Content-Type', 'application/json');
+        res.status(200).json(lists[0]);
+    });
+};
 
 const createRecipe = async (req, res) => {
     const recipe = {
@@ -39,38 +39,39 @@ const createRecipe = async (req, res) => {
     }
 };
 
-// const updateContact = async (req, res) => {
-//     const userId = new ObjectId(req.params.id);
+const updateRecipe = async (req, res) => {
+    const userId = new ObjectId(req.params.id);
     // be aware of updateOne if you only want to update specific fields
-//     const contact = {
-//       firstName: req.body.firstName,
-//       lastName: req.body.lastName,
-//       email: req.body.email,
-//       favoriteColor: req.body.favoriteColor,
-//       birthday: req.body.birthday
-//     };
-//     const response = await mongodb
-//       .getDb()
-//       .db()
-//       .collection('contacts')
-//       .replaceOne({ _id: userId }, contact);
-//     console.log(response);
-//     if (response.modifiedCount > 0) {
-//       res.status(204).send();
-//     } else {
-//       res.status(500).json(response.error || 'Some error occurred while updating the contact.');
-//     }
-//   };
+    const recipe = {
+        name: req.body.name,
+        ingredients: req.body.ingredients,
+        step1: req.body.step1,
+        step2: req.body.step2,
+        step3: req.body.step3,
+        step4: req.body.step4
+    };
+    const response = await mongodb
+      .getDb()
+      .db()
+      .collection('recipes')
+      .replaceOne({ _id: userId }, recipe);
+    console.log(response);
+    if (response.modifiedCount > 0) {
+      res.status(204).send();
+    } else {
+      res.status(500).json(response.error || 'Some error occurred while updating the recipe.');
+    }
+  };
 
-//   const deleteContact = async (req, res) => {
-//     const userId = new ObjectId(req.params.id);
-//     const response = await mongodb.getDb().db().collection('contacts').remove({ _id: userId }, true);
-//     console.log(response);
-//     if (response.deletedCount > 0) {
-//       res.status(204).send();
-//     } else {
-//       res.status(500).json(response.error || 'Some error occurred while deleting the contact.');
-//     }
-//   };
+  const deleteRecipe = async (req, res) => {
+    const userId = new ObjectId(req.params.id);
+    const response = await mongodb.getDb().db().collection('recipes').remove({ _id: userId }, true);
+    console.log(response);
+    if (response.deletedCount > 0) {
+      res.status(204).send();
+    } else {
+      res.status(500).json(response.error || 'Some error occurred while deleting the recipe.');
+    }
+  };
 
-module.exports = { getAll, createRecipe};
+module.exports = { getAll, getSingle, createRecipe, updateRecipe, deleteRecipe};
