# routes/recipes.js
@@ -5,12 +5,12 @@ const recipeController = require('../controllers/recipes');
 
 router.get('/', recipeController.getAll);
 
-// router.get('/:id', contactsController.getSingle);
+router.get('/:id', recipeController.getSingle);
 
 router.post('/', recipeController.createRecipe);
 
-// router.put('/:id', contactsController.updateContact);
+router.put('/:id', recipeController.updateRecipe);
 
-// router.delete('/:id', contactsController.deleteContact);
+router.delete('/:id', recipeController.deleteRecipe);
 
 module.exports = router;
